--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     color: white;
     background: black;
     margin: 0px
-    font-family "Chakra Petch", sans-serif;
+    font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
